# Halcyon

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/law-agent-backend/: .gitignore  pyproject.toml
apps/law-agent-backend/src/agent/bootstrap/: settings.py
apps/law-agent-backend/src/agent/entrypoints/api/: app_factory.py  main.py
apps/law-agent-backend/src/agent/entrypoints/api/routers/: health.py  runs.py
apps/law-agent-backend/src/agent/entrypoints/api/schemas/: runs.py
apps/law-agent-backend/src/agent/entrypoints/stream_api/: __init__.py  app_factory.py  main.py
apps/law-agent-backend/src/agent/entrypoints/workers/: celery_app.py
apps/law-agent-backend/src/agent/entrypoints/workers/tasks/: agent.py
apps/law-agent-backend/src/agent/modules/agent_runtime/application/: run_service.py
apps/law-agent-backend/src/agent/modules/agent_runtime/domain/: evidence.py
apps/law-agent-backend/src/agent/modules/agent_runtime/graphs/main_graph/: builder.py  nodes.py  reducers.py  state.py
apps/law-agent-backend/src/agent/modules/skills/plugin_sdk/: base.py  manifest.py  registry.py  result.py
apps/law-agent-backend/src/agent/shared/contracts/: run_events.py
apps/law-agent-backend/tests/: conftest.py
apps/law-agent-backend/tests/api/: test_health.py  test_runs.py  test_stream.py
apps/law-agent-backend/tests/contract/deployment/: test_compose_contract.py
apps/law-agent-backend/tests/contract/events/: test_run_event.py
apps/law-agent-backend/tests/contract/skills/: test_registry.py
apps/law-agent-backend/tests/graph/: test_main_graph.py
apps/law-agent-backend/tests/unit/agent_runtime/: test_evidence_reducer.py
apps/law-agent-backend/tests/unit/bootstrap/: test_settings.py
apps/law-agent-backend/tests/unit/workers/: test_celery_routing.py
apps/law-agent-web/: eslint.config.mjs  pnpm-lock.yaml
apps/law-agent-web/app/: globals.css  layout.tsx
apps/law-agent-web/app/(workspace)/chat/: page.tsx
apps/law-agent-web/features/chat/components/: chat-workspace.tsx
apps/law-agent-web/lib/api/: client.ts
apps/law-agent-web/lib/events/: run-events.ts
apps/web/: package.json  tsconfig.json
configs/: litellm.yaml
contracts/events/: run-event.schema.json
deploy/compose/: compose.dev.yml  compose.yml
deploy/docker/: backend.Dockerfile  web.Dockerfile
deploy/nginx/: nginx.conf
docs/: 企业级_LangGraph_AI智能体系统设计说明书_V1.0.docx  多智能体RAG项目设计与开发指南.docx  多智能体RAG项目设计与开发指南.md
scripts/: demo_graph.py  verify.sh
src/lows_agent/agents/: search_agent.py
src/lows_agent/config/: settings.py
src/lows_agent/llm/: __init__.py  factory.py  structured.py
src/lows_agent/prompts/search/: prompts.py
src/lows_agent/skill_packages/research/: SKILL.md
src/lows_agent/skills/: __init__.py
src/lows_agent/skills/core/: __init__.py  loader.py  models.py  runtime.py
src/lows_agent/skills/registry/: __init__.py  registry.py
src/lows_agent/skills/selection/: __init__.py  selector.py
src/lows_agent/tools/search/: page_reader.py  source_ranker.py  web_search.py
tests/unit/llm/: test_factory.py
(+2 files in other folders)
