[project]
name = "law-agent-backend"
version = "0.1.0"
description = "Enterprise LangGraph AI agent modular monolith backend"
requires-python = ">=3.13,<3.15"
dependencies = [
  "celery>=5.6,<5.7",
  "fastapi>=0.139,<0.140",
  "langgraph>=1.2,<1.3",
  "pydantic>=2.13,<3",
  "pydantic-settings>=2.10,<3",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "hypothesis>=6.135,<7",
  "mypy>=1.16,<2",
  "pytest>=9,<10",
  "pytest-asyncio>=1.1,<2",
  "ruff>=0.12,<1",
  "types-pyyaml>=6.0,<7",
  "pyyaml>=6.0,<7",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/enterprise_agent"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["UP046"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["enterprise_agent"]

[tool.uv]
package = true

[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true
